--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="facebook-domain-verification" content="y3kvxa21ayhqhn92tedqnool44mqlw" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
